# DescentVR

./: README.md
Projects/Android/DescentCore/: CMakeLists.txt
Projects/Android/DescentCore/src/2d/: bitblt.c  bitmap.c  box.c  canvas.c  circle.c  cursor.c  disc.c  effects.c  font.c  gpixel.c  gr.c  ibitblt.c  lbitblt.c  line.c  linear.c  linearc.c  median.c  modex.c  modexc.c  palette.c  pcx.c  pixel.c  poly.c  rect.c  rle.c  roller.c  scale.c  scanline.c  tmapbits.c  tpoly.c  vesa.c
Projects/Android/DescentCore/src/3d/: clipper.c  draw.c  globvars.c  instance.c  interp.c  matrix.c  points.c  rod.c  setup.c  upvecs.c  vecview.c
Projects/Android/DescentCore/src/cfile/: cfile.c
Projects/Android/DescentCore/src/fix/: fix.c  tables.c
Projects/Android/DescentCore/src/iff/: iff.c
Projects/Android/DescentCore/src/io/: dpmi.c  ipx.c  joy.c  key.c  mono.c  mouse.c  timer.c
Projects/Android/DescentCore/src/lib/: 3d.h  ai.h  aistruct.h  arcade.h  args.h  automap.h  bm.h  byteswap.h  cdrom.h  centers.h  cfile.h  cflib.h  cfmain.h  cntrlcen.h  coindev.h  collide.h  compbit.h  config.h  controls.h  convert1.h  credits.h  dcflib.h  delta.cfg  demo.h  desc_id.h  digi.h  digicomp.h  div0.h  dosxptrs.h  dpmi.h  editor.h  effect2d.h  effects.h  ehostage.h  endlevel.h  eobject.h  error.h  eswitch.h  fireball.h  fix.h  (+119 more)
Projects/Android/DescentCore/src/main/: ai.c  aipath.c  args.c  automap.c  bm.c  bmread.c  cntrlcen.c  collide.c  config.c  controls.c  credits.c  dumpmine.c  effects.c  endlevel.c  escort.c  fireball.c  fuelcen.c  fvi.c  game.c  gamefont.c  gamemine.c  gamesave.c  gameseg.c  gameseq.c  gauges.c  hash.c  hmp.c  hostage.c  hud.c  iglasses.c  inferno.c  joycal.c  joydefs.c  kconfig.c  kmatrix.c  laser.c  lightning.c  mcockpit.c  menu.c  mglobal.c  (+34 more)
(+32 files in other folders)
